[gd_scene load_steps=5 format=3 uid="uid://82456qiy1un1"]

[ext_resource type="Script" uid="uid://d0ikbxjo8ulgi" path="res://ui/settings_ui/bus_volume_control.gd" id="1_dh457"]
[ext_resource type="Texture2D" uid="uid://b7w68ki3ymq43" path="res://ui/UI_sprite_sheet.png" id="2_drhxk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n2csd"]
atlas = ExtResource("2_drhxk")
region = Rect2(720, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m6xd"]
atlas = ExtResource("2_drhxk")
region = Rect2(720, 192, 16, 16)

[node name="BusVolumeControl" type="HBoxContainer"]
offset_right = 194.0
offset_bottom = 28.0
theme_override_constants/separation = 8
script = ExtResource("1_dh457")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Master Volume:"

[node name="VolumeSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(78, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -60.0
max_value = 0.0
step = 0.2
ticks_on_borders = true

[node name="MutedCheckButton" type="CheckBox" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 4
theme_override_icons/checked = SubResource("AtlasTexture_n2csd")
theme_override_icons/unchecked = SubResource("AtlasTexture_4m6xd")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="MutedCheckButton" to="." method="_on_muted_check_button_toggled"]
